--- a/doomclone/.godot/editor/editor_layout.cfg
+++ b/doomclone/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/EnemyBasicGrunt.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Seeker.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/IronXbow/", "res://Sprites/IronXbow/IronXbow/", "res://Sprites/IronXbow/IronXbow/SPRITES/", "res://Sprites/AutoShotgunGuy/SPRITES/", "res://Scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/player.tscn", "res://Scenes/crossbow.tscn", "res://Scenes/UI.tscn", "res://Scenes/world.tscn", "res://Scenes/e_1m_1_01.tscn", "res://Scenes/EnemyBasicGrunt.tscn")
+open_scenes=PackedStringArray("res://Scenes/player.tscn", "res://Scenes/crossbow.tscn", "res://Scenes/UI.tscn", "res://Scenes/world.tscn", "res://Scenes/e_1m_1_01.tscn", "res://Scenes/Seeker.tscn")
 current_scene="res://Scenes/world.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
