--- a/doomclone/.godot/editor/script_editor_cache.cfg
+++ b/doomclone/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 37,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 25,
-"scroll_position": 14.0,
+"h_scroll_position": 285,
+"row": 11,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 51,
+"row": 21,
 "scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -63,7 +63,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 22,
-"scroll_position": 11.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,6 +77,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/InteractDoor.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
